k8s/policies/api-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-firewall

spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: [user-service, post-service, notification-service]
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
