k8s/policies/redis-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-firewall
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: notification-service
      ports:
        - port: 6379
          protocol: TCP
